third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/array/missing-separator-1.stderr
TOML parse error at line 1, column 14
  |
1 | arrr = [true false]
  |              ^
invalid array
expected `]`
